Solve overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/cdk/overlay-prebuilt.css';
 
-.cdk-overlay-pane {
-  background-color: white;
-
-  & > *:first-child {
-
-  }
+.level-rect {
+  // stroke: white;
+  //  stroke-width: .5;
+  //  stroke-dasharray: 100, 100;
+  transition: all ease-in-out .35s;
 }
 
-.cdk-overlay-backdrop {
-  transition: none;
-}
-
-div [class="cdk-overlay-pane"] {
-  border: 5px solid lightgray;
-  border-radius: 5px;
-}
-
-div [class="cdk-overlay-pane fullscreen"] {
-  border: 0px solid lightgray;
-  border-radius: 0px;
+.level-rect:hover {
+  opacity: .75;
 }
